apps/bgd/battalion-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: $(params.battalion)
  name: $(params.battalion)
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: $(params.battalion)
---
