apps/bgd/battalion-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: battalion
  name: battalion
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: battalion
    weight: 100
